--- a/TODO
+++ b/TODO
@@ -91,10 +91,62 @@
 
 - Rename sparsity -> sparseness?
 
+- To help implement the Kronecker product (see below): Introduce
+  arr_rep_times(x, times) and arr_rep_each(x, each) generics. The 'times'
+  and 'each' args must be integer vectors with the same length as 'dim(x)'.
+  They are multidimensional versions of 'rep(, times=t)' and 'rep(, each=e)'
+  that perform the repeats along each dimension of the array.
+
+  For example, with x = matrix(1:6, ncol=2):
+
+      > x
+           [,1] [,2]
+      [1,]    1    4
+      [2,]    2    5
+      [3,]    3    6
+
+   1. arr_rep_times(x, times=c(2, 4)) returns:
+
+      > do.call(cbind, rep(list(do.call(rbind, rep(list(x), 2))), 4))
+           [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8]
+      [1,]    1    4    1    4    1    4    1    4
+      [2,]    2    5    2    5    2    5    2    5
+      [3,]    3    6    3    6    3    6    3    6
+      [4,]    1    4    1    4    1    4    1    4
+      [5,]    2    5    2    5    2    5    2    5
+      [6,]    3    6    3    6    3    6    3    6
+
+   2. arr_rep_each(x, each=c(2, 4)) returns:
+
+     > matrix(rep(t(matrix(rep(x, each=2), ncol=ncol(x))), each=4),
+              byrow=TRUE, ncol=ncol(x)*4)
+           [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8]
+      [1,]    1    1    1    1    4    4    4    4
+      [2,]    1    1    1    1    4    4    4    4
+      [3,]    2    2    2    2    5    5    5    5
+      [4,]    2    2    2    2    5    5    5    5
+      [5,]    3    3    3    3    6    6    6    6
+      [6,]    3    3    3    3    6    6    6    6
+
+  Note that the arr_rep_times() and arr_rep_each() generics really belong to
+  the S4Arrays package (with the methods for ordinary arrays defined there
+  too).
+
+  Then kronecker(X, Y) (see below) can simply be obtained with:
+
+    arr_rep_each(X, each=dim(Y)) * arr_rep_times(Y, times=dim(X))
+
+  And this should be made the kronecker() method for Array objects.
+
 - Implement kronecker() method (Kronecker product) for SVT_SparseArray objects.
   A quick scan of BioC 3.18 software packages reveals that 25+ packages call
   the kronecker() function. Would be interesting to know how many of them need
   to do this on sparse objects?
+
+  Note that one way to go is to simply implement arr_rep_times() and
+  arr_rep_each() methods for SVT_SparseArray objects. This will give us
+  kronecker() for free (via the kronecker() method for Array objects defined
+  in S4Arrays, see above).
 
   Good things to test (on SVT_SparseArray objects) once this is implemented:
 
