--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
+- Add nzvals() methods for COO_SparseArray and SVT_SparseArray objects.
+  Uncomment nzvals() examples in vignette and SparseArray-class.Rd
+
+- Add unit tests for nzwhich() and nzvals() methods for COO_SparseArray
+  and SVT_SparseArray objects.
+
 - To support Shila's use case (see #tech-advisory-board channel on
   community Slack):
 
