--- a/vignettes/SparseArray_objects.Rmd
+++ b/vignettes/SparseArray_objects.Rmd
@@ -3,7 +3,7 @@ title: "SparseArray objects"
 author:
 - name: Hervé Pagès
   affiliation: Fred Hutchinson Cancer Research Center, Seattle, WA
-date: "Compiled `r doc_date()`;  Modified 7 June 2023"
+date: "Compiled `r doc_date()`;  Modified 24 July 2023"
 package: SparseArray
 vignette: |
   %\VignetteIndexEntry{SparseArray objects}
@@ -224,7 +224,7 @@ Note that multidimensional transposition is supported via `aperm()`:
 aperm(svt2)
 ```
 
-## Combining objects by rows or columns
+## Combine multidimensional objects along a given dimension
 
 Like ordinary matrices in base R, SVT\_SparseMatrix objects can be
 combined by rows or columns, with `rbind()` or `cbind()`:
@@ -234,18 +234,26 @@ svt3 <- poissonSparseMatrix(6, 2, density=0.5)
 cbind(svt1, svt3)
 ```
 
-See `?SparseArray_combine` for more information and additional examples.
+Multidimensional objects can be combined along any dimension:
+```{r}
+svt4a <- poissonSparseArray(c(5, 6, 2), density=0.4)
+svt4b <- poissonSparseArray(c(5, 6, 5), density=0.2)
+svt4c <- poissonSparseArray(c(5, 6, 4), density=0.2)
+abind(svt4a, svt4b, svt4c)
+```
+
+See `?SparseArray_abind` for more information and additional examples.
 
 ## Matrix multiplication and cross-product
 
 Like ordinary matrices in base R, SVT\_SparseMatrix objects can be
 multiplied with the `%*%` operator:
 ```{r}
-m4 <- matrix(0L, nrow=5, ncol=6, dimnames=list(letters[1:5], LETTERS[1:6]))
-m4[c(2, 6, 12:17, 22:30)] <- 101:117
-svt4 <- SparseArray(m4)
+m5 <- matrix(0L, nrow=5, ncol=6, dimnames=list(letters[1:5], LETTERS[1:6]))
+m5[c(2, 6, 12:17, 22:30)] <- 101:117
+svt5 <- SparseArray(m5)
 
-svt4 %*% svt3
+svt5 %*% svt3
 ```
 
 They also support `crossprod()` and `tcrossprod()`:
@@ -260,7 +268,7 @@ See `?SparseMatrix_mult` for more information and additional examples.
 The `r Biocpkg("SparseArray")` package provides memory-efficient col/row
 summarization methods for SVT\_SparseMatrix objects:
 ```{r}
-colVars(svt4)
+colVars(svt5)
 ```
 
 Note that multidimensional objects are supported:
@@ -277,7 +285,7 @@ See `?matrixStats_methods` for more information and additional examples.
 
 A `rowsum()` method is provided:
 ```{r}
-rowsum(svt4, group=c(1:3, 2:1))
+rowsum(svt5, group=c(1:3, 2:1))
 ```
 
 See `?rowsum_methods` for more information and additional examples.
@@ -287,7 +295,7 @@ See `?rowsum_methods` for more information and additional examples.
 Use `writeSparseCSV()` to write a sparse matrix to a CSV file:
 ```{r}
 csv_file <- tempfile()
-writeSparseCSV(m4, csv_file)
+writeSparseCSV(m5, csv_file)
 ```
 
 Use `readSparseCSV()` to read the file. This will import the data as
