--- a/TODO
+++ b/TODO
@@ -1,3 +1,25 @@
+- Add is.nonzero() generic with methods for SparseArray objects and other
+  sparseMatrix derivatives from the Matrix package ([d|l|n]g[C|R]Matrix
+  objects).
+  is.nonzero(<SVT_SparseArray>) simply needs to strip off the "nzvals"
+  component from the non-empty leaves and return the result as a logical
+  SVT_SparseArray. This means that the returned object will be fully
+  lacunar (i.e. all its leaves will be lacunar).
+  is.nonzero(<[d|l|n]g[C|R]Matrix>) should return an ng[C|R]Matrix object.
+
+- Implement is.na() method for SVT_SparseArray objects. Like is.nonzero(),
+  it should return a logical SVT_SparseArray object that is fully lacunar.
+
+- Implement coercion from Hits to SVT_SparseMatrix. The returned object
+  should be an integer SVT_SparseMatrix with only zeros and ones that is
+  the adjacency matrix of the bipartite graph represented by the Hits object.
+  It will be fully lacunar.
+  Note that in the case of a SelfHits object the result will be a square
+  SVT_SparseMatrix.
+  Question: should multiple edges between the same two nodes produce values
+  > 1 in the adjacency matrix? (Google this.) This means that the resulting
+  SVT_SparseMatrix won't necessarily be fully lacunar.
+
 - Add nzvals() methods for COO_SparseArray and SVT_SparseArray objects.
   Uncomment nzvals() examples in vignette and SparseArray-class.Rd
 
@@ -194,42 +216,3 @@
   SVT_SparseMatrix and try to do the things that the curatedMetagenomicData
   folks usually do on it.
 
-- Do we need a dedicated container for SVT_SparseArray objects of type
-  logical with no NAs? There's only one possible nonzero value for these
-  objects (TRUE) so there's no need to store the nonzero values. More
-  precisely, the dedicated container could use the following simpler internal
-  representation: keep the tree structure of SVT_SparseArray objects but
-  instead of using a list of 2 parallel vectors for each non-NULL leaf (this
-  list stores the offset/value pairs), use an integer vector to only store
-  the offsets.
-  The dedicated container would be called OVT_SparseArray, for "Offset Vector
-  Tree". It would be another SparseArray subclass. Would inherit the "dim"
-  and "dimnames" slots from SparseArray and only add the "SVT" slot ("type"
-  slot not needed).
-  This would make the memory footprint of an OVT_SparseArray object half
-  that of an SVT_SparseArray of type logical!
-  Notes:
-    - The type of an OVT_SparseArray object would always be "logical".
-    - 2 typical use cases for OVT_SparseArray: (1) represent the result of
-      calling is.na() on an SVT_SparseArray object, (2) represent the
-      adjacency matrix of a graph.
-    - OVT_SparseArray is to SVT_SparseArray what ngCMatrix is to dgCMatrix.
-    - Coercion from SVT_SparseArray to OVT_SparseArray should be supported.
-      Would replace all sparse vectors in the tree with offset vectors, by
-      stripping off the "vals" component from the non-NULL leaves.
-    - Coercion back from OVT_SparseArray to SVT_SparseArray should also be
-      supported. Would produce a SVT_SparseArray of type logical.
-    - Like with a logical SVT_SparseArray (and, conceptually, with any
-      array-like object of type "logical"), we should be able to use an
-      OVT_SparseArray object to subset another array-like object of identical
-      dimensions (conformable arrays).
-  ALTERNATE APPROACHES:
-  - Make OVT_SparseArray an extension of SVT_SparseArray.
-  - Or simply don't introduce a new class for this and make it an internal
-    business of the SVT_SparseArray representation to use either a Sparse
-    Vector Tree for the general case or an Offset Vector Tree for the
-    special "type=logical with no NAs" case.
-  UPDATE ON THIS (May 7, 2024):
-    This will be achieved by supporting "lacunar leaves" which will be
-    internal business, so no need to introduce a new SparseArray subclass.
-    This is currently work-in-progress.
