--- a/vignettes/SparseArray_objects.Rmd
+++ b/vignettes/SparseArray_objects.Rmd
@@ -3,7 +3,7 @@ title: "SparseArray objects"
 author:
 - name: Hervé Pagès
   affiliation: Fred Hutchinson Cancer Research Center, Seattle, WA
-date: "Compiled `r BiocStyle::doc_date()`; Modified 5 July 2024"
+date: "Compiled `r BiocStyle::doc_date()`; Modified 20 July 2024"
 package: SparseArray
 vignette: |
   %\VignetteIndexEntry{SparseArray objects}
@@ -20,32 +20,46 @@ library(BiocStyle)
 
 # Introduction
 
-`r Biocpkg("SparseArray")` is an infrastructure package that provides
-an array-like container for efficient in-memory representation of
-multidimensional sparse data in R.
+`r Biocpkg("SparseArray")` is an infrastructure package that enables
+high-performance sparse data representation and manipulation in R.
+The workhorse of the package is an array-like container that allows
+efficient in-memory representation of multidimensional sparse data in R.
 
-The package defines the SparseArray virtual class and two concrete subclasses:
-COO\_SparseArray and SVT\_SparseArray. Each subclass uses its own internal
-representation of the nonzero multidimensional data, the "COO layout"
-and the "SVT layout", respectively.
-
-Note that the SparseArray virtual class could easily be extended by other
-S4 classes that intent to implement alternative internal representations
-of the nonzero multidimensional data.
-
-This vignette focuses on the SVT\_SparseArray container.
 
 # Install and load the package
 
+Use `BiocManager::install()` to install the `r Biocpkg("SparseArray")`
+package:
 ```{r, eval=FALSE}
 if (!require("BiocManager", quietly=TRUE))
     install.packages("BiocManager")
 BiocManager::install("SparseArray")
 ```
 
+Load the package:
 ```{r, message=FALSE}
 library(SparseArray)
 ```
+
+
+# The SparseArray virtual class and its two concrete subclasses
+
+The package defines the SparseArray virtual class and two concrete
+subclasses: COO\_SparseArray and SVT\_SparseArray.
+
+Each subclass uses its own internal representation of the nonzero
+multidimensional data: the "COO layout" and the "SVT layout", respectively.
+
+Note that the SparseArray virtual class makes no assumption about the
+internal representation of the nonzero data, so it could easily be
+extended by other S4 classes that use a different layout for the
+nonzero data.
+
+This vignette focuses on the SVT\_SparseArray container, which is
+the most memory-efficient and feature-complete of the two SparseArray
+subclasses. The COO\_SparseArray class is only provided to support
+some rare use-cases. In other words, using SVT\_SparseArray objects
+is almost always preferred over using COO\_SparseArray objects.
 
 
 # SVT\_SparseArray objects
@@ -54,55 +68,107 @@ The SVT\_SparseArray container provides an efficient representation of the
 nonzero multidimensional data via a novel layout called the "SVT layout".
 
 Note that SVT\_SparseArray objects mimic as much as possible the behavior of
-ordinary matrix and array objects in base R. In particular, they suppport
+ordinary matrix or array objects in base R. In particular, they suppport
 most of the "standard matrix and array API" defined in base R and in the
 `r Biocpkg("matrixStats")` package from CRAN.
 
 ## Construction
 
 SVT\_SparseArray objects can be constructed in many ways. A common way
-is to coerce an ordinary matrix or array to SVT\_SparseArray:
+is to start with an empty object and to subassign nonzero values to it:
 ```{r}
-m <- matrix(0L, nrow=6, ncol=4)
-m[c(1:2, 8, 10, 15:17, 24)] <- (1:8)*10L
-svt1 <- as(m, "SVT_SparseArray")
+svt1 <- SVT_SparseArray(dim=c(6, 4))
+svt1[c(1:2, 8, 10, 15:17, 24)] <- (1:8)*10L
 svt1
 
-a <- array(0L, 5:3)
-a[c(1:2, 8, 10, 15:17, 20, 24, 40, 56:60)] <- (1:15)*10L
-svt2 <- as(a, "SVT_SparseArray")
+svt2 <- SVT_SparseArray(dim=5:3)
+svt2[c(1:2, 8, 10, 15:17, 20, 24, 40, 56:60)] <- (1:15)*10L
 svt2
 ```
-Alternatively, the ordinary matrix or array can be passed to the
-`SVT_SparseArray` constructor function:
+
+Another way is to coerce a matrix- or array-like object to
+SVT\_SparseArray:
 ```{r}
-svt1 <- SVT_SparseArray(m)
-svt2 <- SVT_SparseArray(a)
+# Coerce a dgCMatrix object to SVT_SparseArray:
+dgcm <- Matrix::rsparsematrix(12, 5, density=0.15)
+svt3 <- as(dgcm, "SVT_SparseArray")
+
+# Coerce a TENxMatrix object to SVT_SparseArray:
+suppressMessages(library(HDF5Array))
+M <- writeTENxMatrix(svt3)
+svt3b <- as(M, "SVT_SparseArray")
+
+# Sanity check:
+stopifnot(identical(svt3, svt3b))
 ```
 
-See `?SVT_SparseArray` for more information about the `SVT_SparseArray`
+Alternatively, these coercions can be done by simply passing the object
+to coerce to the `SVT_SparseArray()` constructor function:
+```{r}
+svt3  <- SVT_SparseArray(dgcm)  # same as as(dgcm, "SVT_SparseArray")
+svt3b <- SVT_SparseArray(M)     # same as as(M, "SVT_SparseArray")
+```
+
+See `?SVT_SparseArray` for more information about the `SVT_SparseArray()`
 constructor function and additional examples.
 
-Note that coercing an ordinary matrix or array to SparseArray is also
-supported and will produce the same results:
-```{r}
-svt1 <- as(m, "SparseArray")
-svt2 <- as(a, "SparseArray")
-```
-This is because, for most use cases, the SVT\_SparseArray representation
-is more efficient than the COO\_SparseArray representation, so the former
-is usually preferred over the latter.
+## SVT\_SparseArray vs COO\_SparseArray
 
-For the same reason, the `SparseArray` constructor function will also
-give the preference to the SVT\_SparseArray representation:
+As mentioned earlier, SVT\_SparseArray objects are almost always preferred
+over using COO\_SparseArray objects. Coercing to SparseArray or using
+the `SparseArray()` constructor function reflects this preference i.e.
+in both cases the actual class of the returned SparseArray derivative
+will almost always be SVT\_SparseArray (or SVT\_SparseMatrix). Except
+in the rare situation where returning a COO\_SparseArray object is a more
+natural fit for the input object.
+
+For example coercing the following objects to SparseArray will _always_
+produce an SVT\_SparseArray object:
 ```{r}
-svt1 <- SparseArray(m)
-svt2 <- SparseArray(a)
+# Coerce an ordinary matrix to SparseArray:
+a <- array(rpois(80, lambda=0.35), dim=c(5, 8, 2))
+class(as(a, "SparseArray"))  # SVT_SparseArray
+
+# Coerce a dgCMatrix object to SparseArray:
+svt3  <- as(dgcm, "SparseArray")
+class(svt3)  # SVT_SparseArray
+
+# Coerce a TENxMatrix object to SparseArray:
+svt3b <- as(M, "SparseArray")
+class(svt3)  # SVT_SparseArray
+```
+
+Also using the `SparseArray()` constructor function on these objects will
+_always_ produce an SVT\_SparseArray object:
+```{r}
+SparseArray(a)              # same as as(a, "SparseArray")
+svt3  <- SparseArray(dgcm)  # same as as(dgcm, "SparseArray")
+svt3b <- SparseArray(M)     # same as as(M, "SparseArray")
 ```
 This is actually the most convenient way to turn an ordinary matrix or
-array into an SVT\_SparseArray object.
+array, or a dgCMatrix object, or a TENxMatrix object, into an SVT\_SparseArray
+object.
 
-Coercion back to ordinary matrix or array is supported:
+One situation where `as(x, "SparseArray")` or `SparseArray(x)` will return
+a COO\_SparseArray object is when the input object `x` is a sparseMatrix
+derivative that uses a compressed _row-oriented_ representation (`"R"`
+representation) instead of the more widely used compressed _column-oriented_
+representation (`"C"` representation):
+```{r}
+ngrm <- sparseMatrix(i=c(1, 5, 5, 6), j=c(4, 2, 3, 2), repr="R")
+class(ngrm)  # ngRMatrix
+class(SparseArray(ngrm))  # COO_SparseMatrix
+```
+One way to enforce the SVT\_SparseArray representation is to coerce the
+result to SVT\_SparseArray:
+```{r}
+svt <- as(SparseArray(ngrm), "SVT_SparseArray")
+class(svt)  # SVT_SparseMatrix
+```
+
+Finally, note that coercing back to ordinary matrix or array (dense
+representation) is supported, although obviously not a good idea if
+the SparseArray object is big:
 ```{r}
 as.array(svt1)  # same as as.matrix(svt1)
 
@@ -201,11 +267,6 @@ signif((svt1^1.5 + svt1) %% 100 - 0.6 * svt1, digits=2)
 See `?SparseArray_Ops`, `?SparseArray_Math`, and `?SparseArray_Complex`,
 for more information and additional examples.
 
-## Other operations on SVT\_SparseArray objects
-
-More operations will be added in the future e.g. `is.na()`, `is.infinite()`,
-`is.nan()`, etc...
-
 ## Generate a random SVT\_SparseArray object
 
 Two convenience functions are provided for this:
@@ -218,7 +279,11 @@ poissonSparseArray(c(5, 6, 2), density=0.5)
 See `?randomSparseArray` for more information and additional examples.
 
 
-# SVT\_SparseMatrix objects
+# 2D case: SVT\_SparseMatrix objects
+
+
+SVT\_SparseMatrix objects are just two-dimensional SVT\_SparseArray objects.
+See `?SparseArray` for a diagram of the SparseArray class hierarchy.
 
 ## Transposition
 
@@ -238,23 +303,23 @@ See `?SparseArray_aperm` for more information and additional examples.
 Like ordinary matrices in base R, SVT\_SparseMatrix objects can be
 combined by rows or columns, with `rbind()` or `cbind()`:
 ```{r}
-svt3 <- poissonSparseMatrix(6, 2, density=0.5)
+svt4 <- poissonSparseMatrix(6, 2, density=0.5)
 
-cbind(svt1, svt3)
+cbind(svt1, svt4)
 ```
 
 Note that multidimensional objects can be combined along any dimension
 with `abind()`:
 ```{r}
-svt4a <- poissonSparseArray(c(5, 6, 2), density=0.4)
-svt4b <- poissonSparseArray(c(5, 6, 5), density=0.2)
-svt4c <- poissonSparseArray(c(5, 6, 4), density=0.2)
-abind(svt4a, svt4b, svt4c)
+svt5a <- poissonSparseArray(c(5, 6, 2), density=0.4)
+svt5b <- poissonSparseArray(c(5, 6, 5), density=0.2)
+svt5c <- poissonSparseArray(c(5, 6, 4), density=0.2)
+abind(svt5a, svt5b, svt5c)
 
-svt5a <- aperm(svt4a, c(1, 3:2))
-svt5b <- aperm(svt4b, c(1, 3:2))
-svt5c <- aperm(svt4c, c(1, 3:2))
-abind(svt5a, svt5b, svt5c, along=2)
+svt6a <- aperm(svt5a, c(1, 3:2))
+svt6b <- aperm(svt5b, c(1, 3:2))
+svt6c <- aperm(svt5c, c(1, 3:2))
+abind(svt6a, svt6b, svt6c, along=2)
 ```
 
 See `?SparseArray_abind` for more information and additional examples.
@@ -264,16 +329,15 @@ See `?SparseArray_abind` for more information and additional examples.
 Like ordinary matrices in base R, SVT\_SparseMatrix objects can be
 multiplied with the `%*%` operator:
 ```{r}
-m6 <- matrix(0L, nrow=5, ncol=6, dimnames=list(letters[1:5], LETTERS[1:6]))
-m6[c(2, 6, 12:17, 22:30)] <- 101:117
-svt6 <- SparseArray(m6)
+svt7 <- SVT_SparseArray(dim=5:6, dimnames=list(letters[1:5], LETTERS[1:6]))
+svt7[c(2, 6, 12:17, 22:30)] <- 101:117
 
-svt6 %*% svt3
+svt7 %*% svt4
 ```
 
 They also support `crossprod()` and `tcrossprod()`:
 ```{r}
-crossprod(svt3)
+crossprod(svt4)
 ```
 
 See `?SparseMatrix_mult` for more information and additional examples.
@@ -283,7 +347,7 @@ See `?SparseMatrix_mult` for more information and additional examples.
 The `r Biocpkg("SparseArray")` package provides memory-efficient col/row
 summarization methods for SVT\_SparseMatrix objects:
 ```{r}
-colVars(svt6)
+colVars(svt7)
 ```
 
 Note that multidimensional objects are supported:
@@ -296,11 +360,13 @@ colAnyNAs(svt2, dims=2)
 
 See `?matrixStats_methods` for more information and additional examples.
 
-## `rowsum()` method
+## `rowsum()` and `colsum()`
 
-A `rowsum()` method is provided:
+`rowsum()` and `colsum()` are supported:
 ```{r}
-rowsum(svt6, group=c(1:3, 2:1))
+rowsum(svt7, group=c(1:3, 2:1))
+
+colsum(svt7, group=c("A", "B", "A", "B", "B", "A"))
 ```
 
 See `?rowsum_methods` for more information and additional examples.
@@ -310,7 +376,7 @@ See `?rowsum_methods` for more information and additional examples.
 Use `writeSparseCSV()` to write a sparse matrix to a CSV file:
 ```{r}
 csv_file <- tempfile()
-writeSparseCSV(m6, csv_file)
+writeSparseCSV(svt7, csv_file)
 ```
 
 Use `readSparseCSV()` to read the file. This will import the data as
@@ -324,6 +390,8 @@ See `?readSparseCSV` for more information and additional examples.
 
 # Comparison with dgCMatrix objects
 
+## "SVT layout" vs "CSC layout"
+
 The nonzero data of a SVT\_SparseArray object is stored in a _Sparse
 Vector Tree_. This internal data representation is referred to as
 the "SVT layout". It is similar to the "CSC layout" (compressed, sparse,
@@ -335,7 +403,7 @@ but with the following improvements:
 
 - With the "SVT layout", the sparse data can be of any type.
   Whereas CsparseMatrix derivatives only support sparse data of
-  type `"double"` or `"logical"` at the moment.
+  type `"double"` or `"logical"`.
 
 - The "SVT layout" imposes no limit on the number of nonzero array
   elements that can be stored. With dgCMatrix/lgCMatrix objects, this
@@ -344,7 +412,47 @@ but with the following improvements:
 - Overall, the "SVT layout" allows more efficient operations on
   SVT\_SparseArray objects.
 
-See `?SVT_SparseArray` for more information.
+See `?SVT_SparseArray` for more information about the "SVT layout".
+
+## Working with a big sparse dataset
+
+The "1.3 Million Brain Cell Dataset" from 10x Genomics is a sparse 2D
+dataset with more than 2^31 nonzero values. The dataset is stored in an
+HDF5 file that is available via ExperimentHub (resource id `EH1039`):
+```{r}
+suppressMessages(library(HDF5Array))
+suppressMessages(library(ExperimentHub))
+hub <- ExperimentHub()
+oneM <- TENxMatrix(hub[["EH1039"]], group="mm10")
+oneM
+```
+
+`oneM` is a TENxMatrix object. This is a particular kind of sparse
+DelayedArray object where the data is on disk in an HDF5 file.
+See `?TENxMatrix` in the `r CRANpkg("HDF5Array")` package for more
+information about TENxMatrix objects.
+
+Note that the object has more than 2^31 nonzero values:
+```{r}
+nzcount(oneM)
+```
+
+The standard way to load the data of a TENxMatrix object (or any
+DelayedArray derivative) from disk to memory is to simply coerce the
+object to the desired in-memory representation.
+
+For example, to load the data in an SVT\_SparseArray object:
+```{r, eval=FALSE}
+# WARNING: This takes a couple of minutes on a modern laptop, and will
+# consume about 25Gb of RAM!
+svt <- as(oneM, "SVT_SparseArray")
+```
+
+To load the data in a dgCMatrix object:
+```{r, eval=FALSE}
+# This will fail because 'oneM' has more than 2^31 nonzero values!
+as(oneM, "dgCMatrix")
+```
 
 
 # Learn more
